enabled O3 optimization in imageBasics

--- a/CPP/Basics/01_OpenCV_ImageBasics/CMakeLists.txt
+++ b/CPP/Basics/01_OpenCV_ImageBasics/CMakeLists.txt
@@ -5,7 +5,7 @@ project( imageBasics )
 set( CMAKE_BUILD_TYPE Release )
 add_compile_options(-std=c++11)
 # Optimization flag, (low) O1 -> O3 (high)
-#set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
+set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 # generate compile commands
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
