10 optical flow LK working version

--- a/CPP/Basics/10_OpenCV_LKOpticalFlow/CMakeLists.txt
+++ b/CPP/Basics/10_OpenCV_LKOpticalFlow/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required( VERSION 2.8 )
-project( imageBasics )
+project( opticalFlowLK )
 
 ## configure build
 set( CMAKE_BUILD_TYPE Release )
@@ -13,6 +13,6 @@ set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_DIRS} )
 
-add_executable( imageBasics imageBasics.cpp )
+add_executable( opticalFlowLK main.cpp )
 # link OpenCV
-target_link_libraries( imageBasics ${OpenCV_LIBS} )
+target_link_libraries( opticalFlowLK ${OpenCV_LIBS} )
