wip 11 direct method sparse

--- a/CPP/Basics/11_DirectMethods/CMakeLists.txt
+++ b/CPP/Basics/11_DirectMethods/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required( VERSION 2.8 )
 project( directMethods )
 
 ## configure build
-set( CMAKE_BUILD_TYPE Release )
+set( CMAKE_BUILD_TYPE Debug )
 add_compile_options(-std=c++11)
 # Optimization flag, (low) O1 -> O3 (high)
-set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
+#set( CMAKE_CXX_FLAGS_RELEASE "-O3" )
 # generate compile commands
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
