--- a/CPP/Project/v0.1/config/default.yaml
+++ b/CPP/Project/v0.1/config/default.yaml
@@ -1,7 +1,6 @@
-%YAML:1.0
-# data
+%YAML 1.2
 # the tum dataset directory, change it to yours! 
-dataset_dir: ../../Basics/data/rgbd_dataset_freiburg1_desk/
+dataset_dir: ../../../Basics/data/rgbd_dataset_freiburg1_desk/
 
 # camera intrinsics
 # fr1
@@ -11,3 +10,13 @@ camera.cx: 325.1
 camera.cy: 249.7
 
 camera.depth_scale: 5000
+
+# VO parameters
+number_of_features: 500
+scale_factor: 1.2
+level_pyramid: 8
+match_ratio: 2.0
+max_num_lost: 10
+min_inliers: 10
+keyframe_rotation: 0.1
+keyframe_translation: 0.1
