--- a/CPP/Project/v0.1/CMakeLists.txt
+++ b/CPP/Project/v0.1/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required( VERSION 2.8 )
 project ( xSLAM )
 
-set( CMAKE_CXX_COMPILER "clang++" )
+set( CMAKE_CXX_COMPILER "clang++-7" )
 ## configure build
 set( CMAKE_BUILD_TYPE Release )
 # Optimization flag, (low) O1 -> O3 (high)
@@ -20,14 +20,14 @@ include_directories( ${EIGEN3_INCLUDE_DIRS} )
 # OpenCV
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-# Sophus 
+# Sophus
 find_package( Sophus REQUIRED )
 include_directories( ${Sophus_INCLUDE_DIRS} )
 # G2O
 find_package( g2o REQUIRED )
 include_directories( ${G2O_INCLUDE_DIRS} )
 
-set( THIRD_PARTY_LIBS 
+set( THIRD_PARTY_LIBS
     ${OpenCV_LIBS}
     ${Sophus_LIBRARIES}
     g2o_core g2o_stuff g2o_types_sba
