--- a/CPP/Project/v0.1/CMakeLists.txt
+++ b/CPP/Project/v0.1/CMakeLists.txt
@@ -3,7 +3,7 @@ project ( xSLAM )
 
 set( CMAKE_CXX_COMPILER "clang++" )
 ## configure build
-set( CMAKE_BUILD_TYPE Release )
+set( CMAKE_BUILD_TYPE Debug )
 # Optimization flag, (low) O1 -> O3 (high)
 set( CMAKE_CXX_FLAGS "-std=c++11 -march=native -O3" )
 # generate compile commands
