--- a/CPP/Project/v0.1/config/default.yaml
+++ b/CPP/Project/v0.1/config/default.yaml
@@ -1,5 +1,5 @@
 %YAML 1.2
-# the tum dataset directory, change it to yours! 
+# TUM dataset directory
 dataset_dir: ../../../Basics/data/rgbd_dataset_freiburg1_desk/
 
 # camera intrinsics
@@ -11,12 +11,13 @@ camera.cy: 249.7
 
 camera.depth_scale: 5000
 
-# VO parameters
-number_of_features: 500
+# VO Parameters
+number_of_features: 800
 scale_factor: 1.2
-level_pyramid: 8
+level_pyramid: 4
 match_ratio: 2.0
 max_num_lost: 10
 min_inliers: 10
 keyframe_rotation: 0.1
 keyframe_translation: 0.1
+map_point_erase_ratio: 0.5
