updated working parallel version based on TBB

--- a/CPP/Project/CameraCalibration/CMakeLists.txt
+++ b/CPP/Project/CameraCalibration/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable( calibrateCamera calibrateCamera.cpp )
 add_executable( calibrateCameraTBB calibrateCameraParallelTBB.cpp )
 # link OpenCV
 target_link_libraries( calibrateCamera ${OpenCV_LIBS} )
+target_link_libraries( calibrateCameraTBB ${OpenCV_LIBS} )
